# lattice

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  SPEC.md
.agents/v1/: ROADMAP.md
.agents/v2/: ROADMAP.md
.agents/v3/: ROADMAP.md
.agents/v3/command-migration/: HANDOFF.md
.github/workflows/: ci.yml  release.yml
docs/: references.md
docs/commands/: .gitkeep
scripts/: lint-arch.sh
src/: lib.rs  main.rs
src/auth/: cache.rs  device_flow.rs  errors.rs  installations.rs  lock.rs  mod.rs  provider.rs  token_bundle.rs
src/cli/: args.rs  mod.rs
src/cli/commands/: auth.rs  changelog.rs  checkout.rs  completion.rs  config_cmd.rs  create.rs  delete.rs  fold.rs  freeze.rs  get.rs  info.rs  init.rs  log_cmd.rs  merge.rs  (+23 more)
src/core/: graph.rs  mod.rs  naming.rs  paths.rs  types.rs  verify.rs
src/doctor/: fixes.rs  generators.rs  issues.rs  mod.rs  planner.rs
src/engine/: capabilities.rs  command.rs  engine_hooks.rs  exec.rs  gate.rs  health.rs  ledger.rs  mod.rs  modes.rs  plan.rs  rollback.rs  runner.rs  scan.rs  verify.rs
src/forge/: factory.rs  github.rs  gitlab.rs  mock.rs  mod.rs  traits.rs
src/git/: interface.rs  mod.rs
src/secrets/: file_store.rs  keychain_store.rs  mod.rs  traits.rs
src/ui/: mod.rs  output.rs  prompts.rs  stack_comment.rs
tests/: architecture_lint.rs  bare_repo_mode_compliance.rs  bootstrap_fixes_integration.rs  commands_integration.rs  gating_matrix.rs  git_integration.rs  github_integration.rs  init_hint_integration.rs  multi_forge.rs  oob_fuzz.rs  persistence_integration.rs  phase3_commands.rs  property_tests.rs  worktree_support_integration.rs
tests/fixtures/: .gitkeep
tests/integration/: mod.rs
(+90 files in other folders)
